records alignment issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -52,29 +52,43 @@ h2 {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
 }
 
-p {
+.lang {
   background-color: #3a3b3c;
   color: white;
   border-style: solid;
   border-width: 1px;
   padding: 3px;
-  margin-right: 2em;
-  text-align: right;
+  margin-left: 5%;
+  width: 10%;
+  text-align: center;
+}
+
+.users {
+  background-color: #3a3b3c;
+  color: white;
+  border-style: solid;
+  border-width: 1px;
+  padding: 3px;
+  margin-left: 10%;
+  text-align: center;
 }
 
 a {
   color: black;
 }
 
+span {
+  width: 50%;
+}
+
 span:hover {
   text-decoration: underline;
   cursor: pointer;
-  background-color: #3a3b3c;
+  /* background-color: #3a3b3c;
   border-style: solid;
-  border-width: 1px;
+  border-width: 1px; */
   color: white;
 }
 
